examples/test/testpolicy5597.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5597
  namespace: namespace201
spec:
  podSelector:
    matchLabels:
      key43: value33
      key33: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value42
          key15: value24
          key2: value26
      podSelector:
        matchLabels:
          key14: value33
